Fix tag-size on mobile view (catalog)

--- a/themes/lecture2go-theme/docroot/_diffs/css/l2go.css
+++ b/themes/lecture2go-theme/docroot/_diffs/css/l2go.css
@@ -720,7 +720,7 @@ p.smallitalic {
 
 .videotile.wide .labels {
     margin-bottom: 10px;
-    padding-right: 35px;
+    margin-right: 25px;
 }
 
 .term-of-creation{
