--- a/themes/lecture2go-theme/docroot/_diffs/css/l2go_view480.css
+++ b/themes/lecture2go-theme/docroot/_diffs/css/l2go_view480.css
@@ -153,9 +153,5 @@
 	    padding: 40px 0 0;
 	}
 	/** UHH FOOTER END **/
-	
-	.video-content-footer .labels .label {
-    	max-width: 33%;
-	}
 
 }
